# unnest_agent-builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
samples/: 주차관리규정.txt
samples/components/: bad_parser_demo.py  pdf_parser_2.py
services/backend/: pyproject.toml
services/backend/app/: bundler.py  config.py  credentials.py  db.py  ingest.py  main.py  provisioner.py  runner.py
services/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
services/frontend/src/: App.tsx  api.ts  store.ts  styles.css  types.ts
services/frontend/src/components/: Canvas.tsx  ChatPanel.tsx  ComponentUploadModal.tsx  FlowNode.tsx  ParamPanel.tsx  Sidebar.tsx  Toolbar.tsx
services/runtime/: Dockerfile  app.py
tests/: test_chunkers.py  test_component_contract.py  test_engine.py  test_ingest_flows.py  test_table_parser.py
tests/scenarios/: scenario_tests.py
