[project]
name = "backend"
version = "0.1.0"
description = "FastAPI 게이트웨이: 레지스트리, flow CRUD/실행, KB 프로비저너, 문서 등록"
requires-python = ">=3.12"
dependencies = [
    "agentsdk",
    "agentengine",
    "agentcomponents",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "docker>=7.0",
    "python-dotenv>=1.0",
    "pywin32>=306; sys_platform == 'win32'",
    "neo4j>=5.20",
    "cryptography>=42.0",
]

[tool.uv.sources]
agentsdk = { workspace = true }
agentengine = { workspace = true }
agentcomponents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
